fix: overflow for purpose

--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -105,6 +105,7 @@
 
 .purpose {
   margin-bottom: 9%;
+  overflow:      hidden;
   &-inner {
     display:     flex;
     align-items: center;
